# thoughtlink

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  compose.yaml  pyproject.toml
configs/: default.yaml
docs/: api-reference.md  architecture.md  status.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_comparison.ipynb  04_wavelet_analysis.ipynb  05_wavelet_vs_baseline_comparison.ipynb
notebooks/data/raw/: README.md
scripts/: benchmark_latency.py  export_onnx.py  run_demo.py  run_mujoco_demo.py  train_baseline.py  train_cnn.py  train_hierarchical.py  train_improved.py  train_wavelet.py
src/thoughtlink/: __init__.py
src/thoughtlink/bridge/: __init__.py  brain_policy.py  intent_to_action.py  mujoco_controller.py  orchestrator.py
src/thoughtlink/data/: __init__.py  dataset.py  loader.py  splitter.py
src/thoughtlink/features/: __init__.py  csp_features.py  eeg_features.py  fusion.py  nirs_features.py  normalization.py
src/thoughtlink/inference/: __init__.py  confidence.py  decoder.py  smoother.py
src/thoughtlink/models/: __init__.py  baseline.py  cnn.py  ensemble.py  hierarchical.py  (+1 more)
tests/: test_brain_policy.py  test_bridge.py  test_bridge_intent.py  test_csp.py  test_data_loader.py  test_data_splitter.py  test_dataset.py  test_decoder.py  test_features.py  test_inference.py  test_integration.py  test_models_baseline.py  test_models_cnn.py  test_models_hierarchical.py  test_nirs_features.py  test_normalization.py  test_preprocessing.py  test_temporal.py
(+9 files in other folders)
